# break_projects

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docstring_template.mustache  pyproject.toml  setup.cfg  setup.py
.devcontainer/: .Dockerfile  Dockerfile  devcontainer.json
src/: hello_world.py
src/classify3D/: basic_correlation.py  basic_statistics.py  class_correlation.py  class_statistics.py  classify3d.ipynb  classify3d.py  distributions.py  explore_data.py  generate_data.py  novelty.py  outliers.py  pairplot.py  split_data.py  transform_data.py
test/: test_hello_world.py
test/classify3D/: test_basic_correlation.py  test_basic_statistics.py  test_class_correlation.py  test_class_statistics.py  test_classify3d.py  test_distributions.py  test_explore_data.py  test_generate_data.py  test_novelty.py  test_outliers.py  test_pairplot.py  test_split_data.py  test_transform_data.py
