[metadata]
name = break_projects
version = 0.1.0
description = Project for while I am on break.
author = Davy Walker Collins
author_email = theseus329@gmail.com
license = MIT
# You can add other metadata fields as needed, like long_description, url, etc.

[options]
packages = find:
install_requires =
    # Add any runtime dependencies here, if required

[options.extras_require]
classification =
    # Add optional classification dependencies here
dev =
    pre-commit==3.8.0
    black==24.8.0
    mypy==1.11.2
    flake8==7.1.1
    flake8-docstrings==1.7.0

[flake8]
max-line-length = 79
extend-ignore = E203
count = true
docstring-convention = numpy
extend-exclude =
    __init__.py

[mypy]
python_version = 3.10
ignore_missing_imports = true
explicit_package_bases = false
no_namespace_packages = true