[metadata]
name = break_projects
version = 0.1.0
description = Project for while I am on break.
author = Davy Walker Collins
author_email = theseus329@gmail.com
license = MIT
# You can add other metadata fields as needed, like long_description, url, etc.

[options]
packages = find:
install_requires =
    ipykernel==6.29.5
    jupyter==1.1.1
    nbconvert==7.16.4

[options.extras_require]
classification =
    numpy==2.0.2
    scipy==1.13.1
    matplotlib==3.9.2
    plotly==5.24.1
    nbformat==5.10.4
    dash==2.18.1
    scikit-learn==1.5.2
    pandas==2.2.3
    dash_bootstrap_components==1.6.0
dev =
    pre-commit==3.8.0
    black==24.8.0
    mypy==1.11.2
    flake8==7.1.1
    flake8-docstrings==1.7.0
    pytest==8.3.3

[flake8]
max-line-length = 79
extend-ignore = E203
count = true
docstring-convention = numpy
extend-exclude =
    __init__.py

[mypy]
python_version = 3.10
ignore_missing_imports = true
explicit_package_bases = false
no_namespace_packages = true